# kraetos-v1

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg
src/: main.py  script.py
src/core/: engine.py  osmosis.py  playbook.py
src/helpers/: google.py  listener.py  stocks.py
src/kraetos/v1/: main.py
src/kraetos/v1/core/: engine.py  osmosis.py
src/kraetos/v1/helpers/: greeting.py  stocks.py
