[metadata]
name = kraetos-v1
version = 0.0.1
author = Abhinav Sinha
author_email = sinhabhinav@hotmail.com
description = A personal virtual AI assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sinhadotabhinav/kraetos-v1
project_urls =
    Bug Tracker = https://github.com/sinhadotabhinav/kraetos-v1/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
